--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5038 2004/02/29 12:05:56 markd Exp $
+$NetBSD: CHANGES,v 1.5039 2004/02/29 12:43:24 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1091,3 +1091,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added iftop-0.16 [xtraeme 2004-02-29]
 	Added acpidump-20020711 [uebayasi 2004-02-29]
 	Updated kdelibs to 3.2.0nb1 [markd 2004-02-29]
+	Updated ccgo to 0.3.4 [jmmv 2004-02-29]
