--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5039 2004/02/29 12:43:24 jmmv Exp $
+$NetBSD: CHANGES,v 1.5040 2004/02/29 13:09:04 martti Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1092,3 +1092,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added acpidump-20020711 [uebayasi 2004-02-29]
 	Updated kdelibs to 3.2.0nb1 [markd 2004-02-29]
 	Updated ccgo to 0.3.4 [jmmv 2004-02-29]
+	Updated bins to 1.1.25 [martti 2004-02-29]
