--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5042 2004/02/29 17:49:30 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5043 2004/02/29 17:52:27 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1096,3 +1096,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated rhythmbox to 0.6.7 [jmmv 2004-02-29]
 	Added firefox-0.8 [xtraeme 2004-02-29]
 	Added firefox-gtk2-0.8 [xtraeme 2004-02-29]
+	Updated autoswc to 1.2 [jmmv 2004-02-29]
