Note addition of ltsa, version 2.2.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5044 2004/02/29 17:56:54 minskim Exp $
+$NetBSD: CHANGES,v 1.5045 2004/02/29 22:23:09 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1098,3 +1098,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added firefox-gtk2-0.8 [xtraeme 2004-02-29]
 	Updated autoswc to 1.2 [jmmv 2004-02-29]
 	Updated mlterm to 2.8.0pl1nb1 [minskim 2004-02-29]
+	Added ltsa-2.2 [jmmv 2004-02-29]
