--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5046 2004/03/01 00:45:27 recht Exp $
+$NetBSD: CHANGES,v 1.5047 2004/03/01 02:27:34 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1100,3 +1100,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mlterm to 2.8.0pl1nb1 [minskim 2004-02-29]
 	Added ltsa-2.2 [jmmv 2004-02-29]
 	Updated roundup to 0.6.7 [recht 2004-03-01]
+	Updated autogen to 5.6.0 [minskim 2004-03-01]
