--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5047 2004/03/01 02:27:34 minskim Exp $
+$NetBSD: CHANGES,v 1.5048 2004/03/01 09:45:31 cube Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1101,3 +1101,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added ltsa-2.2 [jmmv 2004-02-29]
 	Updated roundup to 0.6.7 [recht 2004-03-01]
 	Updated autogen to 5.6.0 [minskim 2004-03-01]
+	Added srm-1.2.8 [cube 2004-03-01]
