--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5050 2004/03/01 20:29:36 jmmv Exp $
+$NetBSD: CHANGES,v 1.5051 2004/03/01 22:52:25 heinz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1107,3 +1107,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated madplay to 0.15.2b [adam 2004-03-01]
 	Updated libtasn1 to 0.2.7 [jmmv 2004-03-01]
 	Updated gnutls to 1.0.8 [jmmv 2004-03-01]
+	Added enigma-0.81 [heinz 2004-03-01]
