--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5052 2004/03/01 23:06:29 snj Exp $
+$NetBSD: CHANGES,v 1.5053 2004/03/02 05:03:47 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1109,3 +1109,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnutls to 1.0.8 [jmmv 2004-03-01]
 	Added enigma-0.81 [heinz 2004-03-01]
 	Updated gqview to 1.4.1 [snj 2004-03-01]
+	Updated esound to 0.2.33 [xtraeme 2004-03-02]
