--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5055 2004/03/02 10:34:42 adam Exp $
+$NetBSD: CHANGES,v 1.5056 2004/03/02 15:23:37 adam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1113,3 +1113,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated libwmf to 0.2.8.2 [adam 2004-03-02]
 	Updated jasper to 1.107.0 [adam 2004-03-02]
 	Updated ImageMagick to 5.5.7.17 [adam 2004-03-02]
+	Updated gentoo to 0.11.46 [adam 2004-03-02]
