--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5056 2004/03/02 15:23:37 adam Exp $
+$NetBSD: CHANGES,v 1.5057 2004/03/02 15:50:08 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1114,3 +1114,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated jasper to 1.107.0 [adam 2004-03-02]
 	Updated ImageMagick to 5.5.7.17 [adam 2004-03-02]
 	Updated gentoo to 0.11.46 [adam 2004-03-02]
+	Updated bittorrent to 3.3nb4 [wiz 2004-03-02]
