--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5058 2004/03/02 16:15:32 adam Exp $
+$NetBSD: CHANGES,v 1.5059 2004/03/02 16:44:47 adam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1116,3 +1116,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gentoo to 0.11.46 [adam 2004-03-02]
 	Updated bittorrent to 3.3nb4 [wiz 2004-03-02]
 	Updated ffcall to 1.9 [adam 2004-03-02]
+	Updated lincity to 1.12.0 [adam 2004-03-02]
