--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5061 2004/03/02 20:45:18 chris Exp $
+$NetBSD: CHANGES,v 1.5062 2004/03/02 23:15:32 snj Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1119,3 +1119,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated lincity to 1.12.0 [adam 2004-03-02]
 	Updated bozohttpd to 20040218nb2 [wiz 2004-03-02]
 	Updated sylpheed to 0.9.10 [chris 2004-03-02]
+	Updated bzflag to 1.10.4 [snj 2004-03-02]
