--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5063 2004/03/03 01:42:14 recht Exp $
+$NetBSD: CHANGES,v 1.5064 2004/03/03 04:03:24 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1121,3 +1121,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated sylpheed to 0.9.10 [chris 2004-03-02]
 	Updated bzflag to 1.10.4 [snj 2004-03-02]
 	Updated mono to 0.30.2 [recht 2004-03-03]
+	Updated opencdk to 0.5.4 [minskim 2004-03-03]
