--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5064 2004/03/03 04:03:24 minskim Exp $
+$NetBSD: CHANGES,v 1.5065 2004/03/03 04:17:53 epg Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1122,3 +1122,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated bzflag to 1.10.4 [snj 2004-03-02]
 	Updated mono to 0.30.2 [recht 2004-03-03]
 	Updated opencdk to 0.5.4 [minskim 2004-03-03]
+	Updated trac to 0.5.2 [epg 2004-03-03]
