--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5065 2004/03/03 04:17:53 epg Exp $
+$NetBSD: CHANGES,v 1.5066 2004/03/03 10:32:16 recht Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1123,3 +1123,7 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mono to 0.30.2 [recht 2004-03-03]
 	Updated opencdk to 0.5.4 [minskim 2004-03-03]
 	Updated trac to 0.5.2 [epg 2004-03-03]
+	Updated bittorrent to 3.3nb5 [recht 2004-03-03]
+	Added bittorrent-gui-3.3 [recht 2004-03-03]
+	Updated py-soappy to 0.11.3 [recht 2004-03-03]
+	Updated py-google to 0.6 [recht 2004-03-03]
