--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5071 2004/03/03 13:37:04 adam Exp $
+$NetBSD: CHANGES,v 1.5072 2004/03/03 14:02:05 adam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1136,3 +1136,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated zoom to 1.0.1anb1 [adam 2004-03-03]
 	Updated tavrasm to 1.20 [dillo 2004-03-03]
 	Updated ncurses to 5.4 [adam 2004-03-03]
+	Updated lynx to 2.8.5 [adam 2004-03-03]
