--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5074 2004/03/03 16:26:40 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5075 2004/03/03 16:40:39 recht Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1138,4 +1138,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ncurses to 5.4 [adam 2004-03-03]
 	Updated lynx to 2.8.5 [adam 2004-03-03]
 	Updated gnet to 2.0.5 [minskim 2004-03-03]
-	mklivecd to 0.3 [xtraeme 2004-03-03]
+	Updated mklivecd to 0.3 [xtraeme 2004-03-03]
+	Updated py-ZODB 3.2.1 [recht 2004-03-03]
