--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5075 2004/03/03 16:40:39 recht Exp $
+$NetBSD: CHANGES,v 1.5076 2004/03/03 19:07:37 salo Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1140,3 +1140,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnet to 2.0.5 [minskim 2004-03-03]
 	Updated mklivecd to 0.3 [xtraeme 2004-03-03]
 	Updated py-ZODB 3.2.1 [recht 2004-03-03]
+	Updated silc-server to 0.9.18 [salo 2004-03-03]
