--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5079 2004/03/03 21:30:08 ben Exp $
+$NetBSD: CHANGES,v 1.5080 2004/03/03 22:43:03 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1144,3 +1144,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated milter-regex to 1.2 [manu 2004-03-03]
 	Deleted lynx-current [ben 2004-03-03]
 	Updated bvi to 1.3.2 [ben 2004-03-03]
+	Updated xchm to 0.9 [minskim 2004-03-03]
