Drop trailing whitespace.

--- a/sysutils/mklivecd/files/mklivecd.8
+++ b/sysutils/mklivecd/files/mklivecd.8
@@ -1,4 +1,4 @@
-.\" $NetBSD: mklivecd.8,v 1.4 2004/03/03 16:26:40 xtraeme Exp $
+.\" $NetBSD: mklivecd.8,v 1.5 2004/03/04 12:29:40 wiz Exp $
 .\"
 .\" mklivecd - Build a NetBSD Live CD for i386 machines
 .\" Copyright (c) 2004 Juan RP <xtraeme@NetBSD.org>
@@ -138,8 +138,8 @@ then X11 sets and configuration files will be unpacked automatically.
 Defaults to
 .Sy no .
 .It CDRECORD_ARGS
-Arguments passed to 
-.Xr cdrecord 1 
+Arguments passed to
+.Xr cdrecord 1
 when burning the
 .Nx
 Live CD ISO image.
