--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5086 2004/03/04 15:49:47 wiz Exp $
+$NetBSD: CHANGES,v 1.5087 2004/03/04 15:57:16 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1151,3 +1151,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated py-psyco to 1.2 [recht 2004-03-04]
 	Added milter-greylist-0.9.tgz [manu 2004-03-04]
 	Added torrentutils-0.3.0 [wiz 2004-03-04]
+	Updated py-bsddb3 to 4.2.4 [minskim 2004-03-04]
