--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5088 2004/03/04 16:13:35 wiz Exp $
+$NetBSD: CHANGES,v 1.5089 2004/03/04 16:14:53 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1153,3 +1153,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added torrentutils-0.3.0 [wiz 2004-03-04]
 	Updated py-bsddb3 to 4.2.4 [minskim 2004-03-04]
 	Updated lablgtk to 1.2.6 [wiz 2004-03-04]
+	Updated mldonkey to 2.5.12 [wiz 2004-03-04]
