--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5089 2004/03/04 16:14:53 wiz Exp $
+$NetBSD: CHANGES,v 1.5090 2004/03/04 16:28:05 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1154,3 +1154,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated py-bsddb3 to 4.2.4 [minskim 2004-03-04]
 	Updated lablgtk to 1.2.6 [wiz 2004-03-04]
 	Updated mldonkey to 2.5.12 [wiz 2004-03-04]
+	Updated py-logging to 0.4.9.2 [minskim 2004-03-04]
