--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5090 2004/03/04 16:28:05 minskim Exp $
+$NetBSD: CHANGES,v 1.5091 2004/03/04 17:07:21 taca Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1155,3 +1155,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated lablgtk to 1.2.6 [wiz 2004-03-04]
 	Updated mldonkey to 2.5.12 [wiz 2004-03-04]
 	Updated py-logging to 0.4.9.2 [minskim 2004-03-04]
+	Updated squid to 2.5.5 [taca 2004-03-04]
