--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5092 2004/03/04 18:54:41 minskim Exp $
+$NetBSD: CHANGES,v 1.5093 2004/03/04 20:55:10 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1157,3 +1157,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated py-logging to 0.4.9.2 [minskim 2004-03-04]
 	Updated squid to 2.5.5 [taca 2004-03-04]
 	Updated gss to 0.0.10 [minskim 2004-03-04]
+	Updated cvs to 1.11.13 [wiz 2004-03-04]
