--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5094 2004/03/04 23:23:17 minskim Exp $
+$NetBSD: CHANGES,v 1.5095 2004/03/05 03:31:50 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1159,3 +1159,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gss to 0.0.10 [minskim 2004-03-04]
 	Updated cvs to 1.11.13 [wiz 2004-03-04]
 	Added p5-Regexp-Common-2.113 [minskim 2004-03-04]
+	Updated gdeskcal to 0.57 [minskim 2004-03-05]
