--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5095 2004/03/05 03:31:50 minskim Exp $
+$NetBSD: CHANGES,v 1.5096 2004/03/05 12:20:15 adam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1160,3 +1160,8 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated cvs to 1.11.13 [wiz 2004-03-04]
 	Added p5-Regexp-Common-2.113 [minskim 2004-03-04]
 	Updated gdeskcal to 0.57 [minskim 2004-03-05]
+	Updated freeciv-client to 1.14.1 [adam 2004-03-05]
+	Updated freeciv-client-gtk to 1.14.1 [adam 2004-03-05]
+	Added freeciv-client-gtk2-1.14.1 [adam 2004-03-05]
+	Updated freeciv-server to 1.14.1 [adam 2004-03-05]
+	Updated freeciv-share to 1.14.1 [adam 2004-03-05]
