note update of the geda suite to 20040111

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5096 2004/03/05 12:20:15 adam Exp $
+$NetBSD: CHANGES,v 1.5097 2004/03/05 13:06:04 dmcmahill Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1165,3 +1165,12 @@ Changes to the packages collection and infrastructure in 2004:
 	Added freeciv-client-gtk2-1.14.1 [adam 2004-03-05]
 	Updated freeciv-server to 1.14.1 [adam 2004-03-05]
 	Updated freeciv-share to 1.14.1 [adam 2004-03-05]
+	Updated geda to 20040111 [dmcmahill 2004-03-05]
+	Updated geda-docs to 20040111 [dmcmahill 2004-03-05]
+	Updated geda-examples to 20040111 [dmcmahill 2004-03-05]
+	Updated geda-symbols to 20040111 [dmcmahill 2004-03-05]
+	Updated geda-utils to 20040111 [dmcmahill 2004-03-05]
+	Updated gnetlist to 20040111 [dmcmahill 2004-03-05]
+	Updated gschem to 20040111 [dmcmahill 2004-03-05]
+	Updated gsymcheck to 20040111 [dmcmahill 2004-03-05]
+	Updated libgeda to 20040111 [dmcmahill 2004-03-05]
