--- a/mail/postfix/INSTALL
+++ b/mail/postfix/INSTALL
@@ -1,4 +1,4 @@
-# $NetBSD: INSTALL,v 1.1 2003/05/01 14:07:56 jmmv Exp $
+# $NetBSD: INSTALL,v 1.2 2004/03/05 13:54:32 grant Exp $
 #
 
 SHAREDIR=@SHAREDIR@
@@ -6,6 +6,6 @@ SHAREDIR=@SHAREDIR@
 case $STAGE in
 POST-INSTALL)
 	echo "===> Running postfix's post-install script"
-	@SHAREDIR@/post-install first-install
+	@SHAREDIR@/post-install command_directory=@PREFIX@/sbin first-install
 	;;
 esac
