--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5098 2004/03/05 13:59:34 grant Exp $
+$NetBSD: CHANGES,v 1.5099 2004/03/05 14:48:31 adam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1175,3 +1175,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gsymcheck to 20040111 [dmcmahill 2004-03-05]
 	Updated libgeda to 20040111 [dmcmahill 2004-03-05]
 	Updated postfix to 2.0.18nb1 [grant 2004-03-05]
+	Added cln-1.1.6 [adam 2004-03-05]
