--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5102 2004/03/05 22:37:30 ben Exp $
+$NetBSD: CHANGES,v 1.5103 2004/03/06 00:42:35 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1179,3 +1179,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated createbuildlink to 3.2 [jlam 2004-03-05]
 	Added libmodplug-0.7 [ben 2004-03-05]
 	Added xmms-modplug-2.05 [ben 2004-03-05]
+	Removed crafty-book-enormous [wiz 2004-03-05]
+	Removed crafty-book-large [wiz 2004-03-05]
