Update abiword to 2.0.4
The changes from version 2.0.3 to 2.0.4 include, amongst others:

# Fix the caret positioning on Windows.
# Fix style export with when using non ASCII characters, corrupting the
  document.
# Fix Input Methods handling for the Thai input handler.
# Speedup the very slow setting of a language on a large selection.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5104 2004/03/06 06:28:47 minskim Exp $
+$NetBSD: CHANGES,v 1.5105 2004/03/06 07:12:54 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1182,3 +1182,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed crafty-book-enormous [wiz 2004-03-05]
 	Removed crafty-book-large [wiz 2004-03-05]
 	Updated blt to 2.4z [minskim 2004-03-06]
+	Updated abiword to 2.0.4 [xtraeme 2004-03-06]
