initial import of ytalk-x11-3.1.1. this package is the same as net/ytalk with optional X11 support enabled.
YTalk is a compatible replacement for the Unix talk(1) program,
which adds a number of features.  Mainly, it can talk to more than
one person at a time, and it can talk to the two different types
of talk daemons out there.

YTalk supports multi-homed hosts, and provides a basic, optional
X interface.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5105 2004/03/06 07:12:54 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5106 2004/03/06 12:08:22 grant Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1183,3 +1183,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed crafty-book-large [wiz 2004-03-05]
 	Updated blt to 2.4z [minskim 2004-03-06]
 	Updated abiword to 2.0.4 [xtraeme 2004-03-06]
+	Added ytalk-x11-3.1.1 [grant 2004-03-06]
