--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5107 2004/03/06 13:47:40 jmmv Exp $
+$NetBSD: CHANGES,v 1.5108 2004/03/06 15:11:18 grant Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1185,3 +1185,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated abiword to 2.0.4 [xtraeme 2004-03-06]
 	Added ytalk-x11-3.1.1 [grant 2004-03-06]
         Updated mozilla-gtk2 to 1.6nb3 [jmmv 2004-03-06]
+	Added postfix-current-20040209 [grant 2004-03-06]
