--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5108 2004/03/06 15:11:18 grant Exp $
+$NetBSD: CHANGES,v 1.5109 2004/03/06 15:11:48 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1186,3 +1186,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added ytalk-x11-3.1.1 [grant 2004-03-06]
         Updated mozilla-gtk2 to 1.6nb3 [jmmv 2004-03-06]
 	Added postfix-current-20040209 [grant 2004-03-06]
+	Updated createbuildlink to 3.3 [jlam 2004-03-06]
