--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5109 2004/03/06 15:11:48 jlam Exp $
+$NetBSD: CHANGES,v 1.5110 2004/03/06 17:32:11 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1187,3 +1187,4 @@ Changes to the packages collection and infrastructure in 2004:
         Updated mozilla-gtk2 to 1.6nb3 [jmmv 2004-03-06]
 	Added postfix-current-20040209 [grant 2004-03-06]
 	Updated createbuildlink to 3.3 [jlam 2004-03-06]
+	Updated openmortal to 0.6 [xtraeme 2004-03-06]
