--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5115 2004/03/07 01:17:33 itojun Exp $
+$NetBSD: CHANGES,v 1.5116 2004/03/07 01:35:31 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1197,3 +1197,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added py-Gnosis-Utils-1.1.1 [recht 2004-03-06]
 	Updated bomberclone to 0.11.2 [snj 2004-03-07]
 	Updated cue to 20040301 [itojun 2004-03-07]
+	Updated nicotine to 1.0.7nb1 [minskim 2004-03-07]
