--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5118 2004/03/07 02:02:22 snj Exp $
+$NetBSD: CHANGES,v 1.5119 2004/03/07 02:07:41 snj Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1202,3 +1202,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated p5-Mail-SPF-Query to 1.996 [heinz 2004-03-07]
 	Updated nicotine to 1.0.7nb1 [minskim 2004-03-07]
 	Updated tuxpaint to 0.9.13 [snj 2004-03-07]
+	Updated tuxpaint-stamps to 2003.12.23 [snj 2004-03-07]
