--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5127 2004/03/07 08:23:13 hamajima Exp $
+$NetBSD: CHANGES,v 1.5128 2004/03/07 09:31:16 seb Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1213,3 +1213,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added cnxtview-0.00a [hamajima 2004-03-07]
 	Added cpia2view-0.03 [hamajima 2004-03-07]
 	Updated qcamview to 0.4 [hamajima 2004-03-07]
+	Updated sather to 1.2.1nb3 [seb 2004-03-07]
