Note update of balsa2 to 2.0.16nb3.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5129 2004/03/07 10:41:58 jmmv Exp $
+$NetBSD: CHANGES,v 1.5130 2004/03/07 11:20:22 recht Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1215,3 +1215,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated qcamview to 0.4 [hamajima 2004-03-07]
 	Updated sather to 1.2.1nb3 [seb 2004-03-07]
         Updated abiword to 2.0.4nb1 [jmmv 2004-03-07]
+        Updated balsa2 to 2.0.16nb3 [recht 2004-03-07]
