--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5131 2004/03/07 11:23:27 markd Exp $
+$NetBSD: CHANGES,v 1.5132 2004/03/07 11:45:43 recht Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1217,3 +1217,4 @@ Changes to the packages collection and infrastructure in 2004:
         Updated abiword to 2.0.4nb1 [jmmv 2004-03-07]
         Updated balsa2 to 2.0.16nb3 [recht 2004-03-07]
         Updated mimedefang to 2.40 [markd 2004-03-07]
+        Updated pure-ftpd to 1.0.18 [recht 2004-03-07]
