--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5132 2004/03/07 11:45:43 recht Exp $
+$NetBSD: CHANGES,v 1.5133 2004/03/07 11:51:48 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1218,3 +1218,4 @@ Changes to the packages collection and infrastructure in 2004:
         Updated balsa2 to 2.0.16nb3 [recht 2004-03-07]
         Updated mimedefang to 2.40 [markd 2004-03-07]
         Updated pure-ftpd to 1.0.18 [recht 2004-03-07]
+        Updated scrollkeeper to 0.3.14nb2 [jmmv 2004-03-07]
