--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5138 2004/03/07 18:46:45 minskim Exp $
+$NetBSD: CHANGES,v 1.5139 2004/03/07 19:43:14 martti Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1224,3 +1224,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Added ccsh-0.0.4 [minskim 2004-03-07]
         Updated gnome-session to 2.4.2nb4 [jmmv 2004-03-07]
 	Added py-GeoIP-1.2.0 [minskim 2004-03-07]
+	Updated mysql-client to 4.0.18 [martti 2004-03-07]
+	Updated mysql-server to 4.0.18 [martti 2004-03-07]
