--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5140 2004/03/07 21:29:19 recht Exp $
+$NetBSD: CHANGES,v 1.5141 2004/03/07 21:31:39 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1228,3 +1228,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mysql-server to 4.0.18 [martti 2004-03-07]
 	Updated bittorrent to 3.4 [recht 2004-03-07]
 	Updated bittorrent-gui to 3.4 [recht 2004-03-07]
+        Updated classpath to 0.07 [jmmv 2004-03-07]
