--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5141 2004/03/07 21:31:39 jmmv Exp $
+$NetBSD: CHANGES,v 1.5142 2004/03/07 22:48:23 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1229,3 +1229,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated bittorrent to 3.4 [recht 2004-03-07]
 	Updated bittorrent-gui to 3.4 [recht 2004-03-07]
         Updated classpath to 0.07 [jmmv 2004-03-07]
+        Updated loudmouth to 0.15.1nb3 [jmmv 2004-03-07]
