--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5143 2004/03/07 23:28:05 snj Exp $
+$NetBSD: CHANGES,v 1.5144 2004/03/07 23:47:48 snj Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1231,3 +1231,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated classpath to 0.07 [jmmv 2004-03-07]
 	Updated loudmouth to 0.15.1nb3 [jmmv 2004-03-07]
 	Updated xscorch to 0.1.16 [snj 2004-03-07]
+	Updated wmusic to 1.4.7nb3 [snj 2004-03-07]
