--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5146 2004/03/08 00:49:48 minskim Exp $
+$NetBSD: CHANGES,v 1.5147 2004/03/08 01:56:53 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1234,3 +1234,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated wmusic to 1.4.7nb3 [snj 2004-03-07]
 	Updated wistumbler2 to 2.00pre7 [xtraeme 2004-03-07]
 	Updated echoping to 5.2.0 [minskim 2004-03-08]
+	Updated dgd to 1.2.0.4 [minskim 2004-03-08]
