--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5149 2004/03/08 06:14:06 minskim Exp $
+$NetBSD: CHANGES,v 1.5150 2004/03/08 09:07:45 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1236,8 +1236,9 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated echoping to 5.2.0 [minskim 2004-03-08]
 	Updated dgd to 1.2.0.4 [minskim 2004-03-08]
 	Updated gnuchess to 5.07 [minskim 2004-03-08]
-	Added gnuchess-book-1.01 [minskim 2004-03-09]
-	Updated gnuchess to 5.07nb1 [minskim 2004-03-09]
-	Updated gnuchess-book-medium to 20000511nb2 [minskim 2004-03-09]
-	Updated gnuchess-book-small to 20000511nb1 [minskim 2004-03-09]
-	Removed gnuchess-book [minskim 2004-03-09]
+	Added gnuchess-book-1.01 [minskim 2004-03-08]
+	Updated gnuchess to 5.07nb1 [minskim 2004-03-08]
+	Updated gnuchess-book-medium to 20000511nb2 [minskim 2004-03-08]
+	Updated gnuchess-book-small to 20000511nb1 [minskim 2004-03-08]
+	Removed gnuchess-book [minskim 2004-03-08]
+	Updated torrentutils to 0.3.0nb1 [wiz 2004-03-08]
