--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-NetBSD: TODO,v 1.1417 2004/02/24 19:40:38 snj Exp $
+$NetBSD: TODO,v 1.1480 2004/03/08 15:43:44 wiz Exp $
 
 Suggested new packages
 ======================
@@ -251,7 +251,6 @@ Suggested package updates
 	o micq-0.4.10.5
 	o midnight-commander-4.6.0
 	o minicom-2.1
-	o mldonkey-2.5.14
 	o mowitz-0.3.0
 	o moz-bin-plugger-1.5.1
 	o mrproject-0.9.1
