Note update of gossip to 0.7.2.

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5152 2004/03/08 15:47:40 adam Exp $
+$NetBSD: CHANGES,v 1.5153 2004/03/08 15:49:21 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1244,3 +1244,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated torrentutils to 0.3.0nb1 [wiz 2004-03-08]
 	Updated mldonkey to 2.5.14 [wiz 2004-03-08]
 	Updated sylpheed-claws to 0.9.10 [adam 2004-03-08]
+        Updated gossip to 0.7.2 [jmmv 2004-03-08]
